# KDCL_InvResUNet

./: README.md  packages.txt
Ablation/: README.md
Embedded_deployment_code/client_code/cpp/: CMakeLists.txt  get_ecg_ppg_data.cpp  main.cpp  mpdev.h
Model/: GHostNet_1D_large.py  InvertedResidual_large_Unet.py  InvertedResidual_small_Unet.py  __init__.py  test01.ipynb
kdcl_train_allmodel_Ten_Flods_4_mean/: run.sh
kdcl_train_allmodel_Ten_Flods_4_min/: run.sh  train_Ten_Fold.py
kdcl_train_allmodel_Ten_Folds_4_mean/: train_Ten_Fold.py
result/: Individual info and results of 2154 subjects.xlsx
test_predict/: README.md
train_InvertedResidual_large_Unet_Ten_Folds/: run.sh
train_InvertedResidual_small_Unet_Ten_Folds/: run.sh
train_UNet_Ten_Folders/: run.sh  train_Ten_Fold.py
train_UTransBPNet_VitalDB_Ten_Folds/: Teacher.py  train_UtransBPNet_VitalDB_Fold01.ipynb  train_UtransBPNet_VitalDB_Fold01.py  train_UtransBPNet_VitalDB_Fold02.ipynb  train_UtransBPNet_VitalDB_Fold02.py  train_UtransBPNet_VitalDB_Fold03.ipynb  train_UtransBPNet_VitalDB_Fold03.py  train_UtransBPNet_VitalDB_Fold04.ipynb  train_UtransBPNet_VitalDB_Fold04.py  train_UtransBPNet_VitalDB_Fold05.ipynb  train_UtransBPNet_VitalDB_Fold05.py  train_UtransBPNet_VitalDB_Fold06.ipynb  train_UtransBPNet_VitalDB_Fold06.py  train_UtransBPNet_VitalDB_Fold07.ipynb  train_UtransBPNet_VitalDB_Fold07.py  train_UtransBPNet_VitalDB_Fold08.ipynb  train_UtransBPNet_VitalDB_Fold08.py  train_UtransBPNet_VitalDB_Fold09.ipynb  train_UtransBPNet_VitalDB_Fold09.py  train_UtransBPNet_VitalDB_Fold10.ipynb  (+1 more)
(+34 files in other folders)
